[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "finnhub-python>=2.4.24",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "yfinance>=0.2.65",
]
